@@ -6,6 +6,7 @@ Release Notes - NHibernate.Validator - Version 1.2.0
     * Target framework .NET 3.5
     * Constraints moved in Constraints namespace.
     * ValidatorMode values was changed (see NHibernate.Validator.Engine.ValidatorMode for reference)
+    * The class NHibernate.Validator.Cfg.NHVConfiguration was renamed to XmlConfiguration
 
 Release Notes - NHibernate.Validator - Version 1.0.0GA
 
